--- a/src/webui/_locales/devrtl/messages.json
+++ b/src/webui/_locales/devrtl/messages.json
@@ -21,26 +21,26 @@
   },
   "appbackend#minimized-to-systray-body": {
     "message": "‮Ↄʅıɔʞ‬ ‮ʇɥǝ‬ ‮ıɔou‬ ‮ʇo‬ ‮ɹǝsʇoɹǝ‬ ‮ʇɥǝ‬ ‮ɐddʅıɔɐʇıou‬",
-    "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (the area of the taskbar with the clock, battery indicator, and other icons -- often called the 'systray')."
+    "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons)."
   },
   "appbackend#minimized-to-systray-title": {
     "message": "‮Ԁsıdɥou‬ ‮ɥɐs‬ ‮qǝǝu‬ ‮ɯıuıɯızǝp‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬",
-    "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (the area of the taskbar with the clock, battery indicator, and other icons -- often called the 'systray')."
+    "description": "Appears in the notification area balloon when Psiphon has been minimized to the Windows' notification area (aka 'system tray' aka 'systray', the area of the taskbar with the clock, battery indicator, and other icons)."
   },
   "appbackend#state-connected-body": {
-    "message": "‮Noʍ‬ ‮ƃo‬ ‮snɹɟ‬ ‮ɟɹǝǝʅʎ‬!",
-    "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. 'Freely' should be interpreted in the 'libre' or 'free as in freedom' sense."
+    "message": "‮Ǝxdʅoɹǝ‬ ‮qǝʎoup‬ ‮ʎonɹ‬ ‮qoɹpǝɹs‬!",
+    "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line."
   },
   "appbackend#state-connected-title": {
     "message": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇǝp‬",
     "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed."
   },
   "appbackend#state-starting-body": {
-    "message": "‮Ԁʅǝɐsǝ‬ ‮ʍɐıʇ‬",
+    "message": "‮Ԁʅǝɐsǝ‬ ‮ʍɐıʇ‬…",
     "description": "Appears in the notification area balloon when Psiphon is in the process of connecting to a server"
   },
   "appbackend#state-starting-title": {
-    "message": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇıuƃ‬…",
+    "message": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇıuƃ‬",
     "description": "Appears in the notification area balloon when Psiphon is in the process of connecting to a server"
   },
   "appbackend#state-stopped-title": {
@@ -282,6 +282,18 @@
   "settings#split-tunnel#help-text": {
     "message": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ɹǝbnǝsʇs‬ ‮ɯɐpǝ‬ ‮ʇo‬ ‮sǝɹʌǝɹs‬ ‮ʍıʇɥıu‬ ‮ʎonɹ‬ ‮ɥoɯǝ‬ ‮ɔonuʇɹʎ‬ ‮ʍıʅʅ‬ ‮uoʇ‬ ‮qǝ‬ ‮ʇnuuǝʅǝp‬ ‮ʇɥɹonƃɥ‬ ‮Ԁsıdɥou‬.",
     "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
+  },
+  "settings#systray-minimize#enable-label": {
+    "message": "‮Wıuıɯızǝ‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬ (‮sʎsʇǝɯ‬ ‮ʇɹɐʎ‬)",
+    "description": "The label on the checkbox that enables 'Minimize to Notification Area (System Tray)'."
+  },
+  "settings#systray-minimize#heading": {
+    "message": "‮Wıuıɯızǝ‬ ‮ʇo‬ ‮Noʇıɟıɔɐʇıou‬ ‮∀ɹǝɐ‬ (‮Sʎsʇǝɯ‬ ‮⊥ɹɐʎ‬)",
+    "description": "Settings section heading. In this section the user can choose to enable or disable the ability for the Psiphon application window to be hidden as a notification area icon when minimized. 'Notification area' is the official term for the icons located near the clock on the Windows taskbar, but it's also often called the 'system tray' or 'systray' -- use whatever is most common in your language, and be verbose if necessary."
+  },
+  "settings#systray-minimize#help-text": {
+    "message": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ʍɥǝu‬ ‮ɯıuıɯızǝp‬ ‮ʇɥǝ‬ ‮Ԁsıdɥou‬ ‮ɐddʅıɔɐʇıou‬ ‮ʍıupoʍ‬ ‮ʍıʅʅ‬ ‮ɥıpǝ‬ ‮ıu‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬ (‮ɐʅso‬ ‮ʞuoʍu‬ ‮ɐs‬ ‮ʇɥǝ‬ “‮sʎsʇǝɯ‬ ‮ʇɹɐʎ‬” ‮oɹ‬ “‮sʎsʇɹɐʎ‬”, ‮ʅoɔɐʇǝp‬ ‮uǝɐɹ‬ ‮ʇɥǝ‬ ‮ɔʅoɔʞ‬ ‮ou‬ ‮ʎonɹ‬ ‮Ｍıupoʍs‬ ‮ʇɐsʞ‬ ‮qɐɹ‬).",
+    "description": "Text explaining to the user what the 'Minimize to Notification Area (System Tray)' setting does if enabled."
   },
   "settings#transport-mode#check-label": {
     "message": "‮∩sǝ‬ ‮ɅԀN‬ ‮Wopǝ‬",
