--- a/src/webui/_locales/devltr/messages.json
+++ b/src/webui/_locales/devltr/messages.json
@@ -143,12 +143,12 @@
     "message": "[<strong>Ħḗḗŀŀǿǿ!</strong> Ẇḗḗŀƈǿǿḿḗḗ ŧǿǿ Ƥşīīƥħǿǿƞ.]",
     "description": "A welcome message shown to the user when they first switch to the correct UI language"
   },
-  "messages#placeholder": {
-    "message": "[Ƞǿǿ ḿḗḗşşȧȧɠḗḗş ẏḗḗŧ]",
+  "logs#placeholder": {
+    "message": "[Ƞǿǿ ŀǿǿɠş ẏḗḗŧ]",
     "description": "Placeholder text shown when there are not yet any log messages to show. This message is removed when the first log message is added."
   },
-  "messages#show-debug-label": {
-    "message": "[Şħǿǿẇ ḓḗḗƀŭŭɠ ḿḗḗşşȧȧɠḗḗş]",
+  "logs#show-debug-label": {
+    "message": "[Şħǿǿẇ ḓḗḗƀŭŭɠ ŀǿǿɠş]",
     "description": "Label on a checkbox. If the user checks it, debug log messages will be shown to the user."
   },
   "nav#about": {
@@ -175,9 +175,9 @@
     "message": "[Ƒḗḗḗḗḓƀȧȧƈķ]",
     "description": "Text on the tab that, if the user clicks on it, switches to the 'Feeback' view. In that view the user can send feedback about their experience to Psiphon."
   },
-  "nav#messages": {
-    "message": "[Ŀǿǿɠ Ḿḗḗşşȧȧɠḗḗş]",
-    "description": "Text on the tab that, if the user clicks on it, switches to the 'Log Messages' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
+  "nav#logs": {
+    "message": "[Ŀǿǿɠş]",
+    "description": "Text on the tab that, if the user clicks on it, switches to the 'Logs' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
   },
   "nav#settings": {
     "message": "[Şḗḗŧŧīīƞɠş]",
